# rustfolio

./: .env.docker  .gitignore  FILE_PICKER_UPDATE.md  IMPORT_FEATURE.md  INVESTMENT_TRACKING_DESIGN.md  LOGGING.md  MONITORING_QUICKSTART.md  QUICKSTART_LOGGING.md  README.md  UI_ACCOUNTS_FEATURE.md  UPTIME_KUMA_SETUP.md  docker-compose.yml  grafana-datasources.yaml  loki-config.yaml  rustfolio_functional_spec.md  rustfolio_learning_plan.md  rustfolio_project_description.md
backend/: .env.example  Cargo.toml  Dockerfile  IMPLEMENTATION_ROADMAP.md  MULTI_PROVIDER_SETUP.md  PHASE3_ANALYSIS.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_4_TRACKING.md  PRICE_CACHING_SYSTEM.md  PRICE_PROVIDERS.md  RISK_ANALYSIS_FILTERING.md  SPRINT10_IN_PROGRESS.md  SPRINT11_COMPLETE.md  SPRINT11_IN_PROGRESS.md  SPRINT12_COMPLETE.md  SPRINT9_IN_PROGRESS.md  TICKER_COVERAGE.md  clear_sentiment_cache.sql
backend/.sqlx/: README.md  query-03bc8564165e5ca085daa658620cfdee780c956bfce287c3f4c3a0a7cae2cc84.json  query-05ff3a40fdce1a83ae1da460c898327db4c3aeb2b05db48bedbcade4c5886a92.json  query-0a3bc608b098de9a855e07a5a9ca62fd7aa2a23378ae70f613a0f57311d2c708.json  query-0d6ec4e7682dc17f4813c346a563cd858ead085913f95b5ff7a9870da7d4e904.json  query-0e15bdca80da77b9ae484b7673a99e887688541034325a460b938cde32eaf287.json  query-0f0d128b8bf9ec3fd13af501100229814b01129ac3b939890a13efeccb9a1acc.json  query-11c8b48f621cffdabd52c20abfcedded02d7aff71165b9884b7913a9cfdfb1b7.json  query-1ac90be02638f6160deb2d50a4863a69ef9528ba263c83ba2ef520b4175af655.json  query-1c77541cbc9ae001fd857d1ce751b30af516a74c4a0877579133a8e925929312.json  query-1e35afb9292498dba913275221b88446a79000a9a86bc969a3e5eeb65a46e1fa.json  query-1f7648d07213a9a6cc2a33b8b8dec99f39781e4398c56f7ff34d2321634bda1f.json  query-1fa55af5a0178bd6f03f8718d4664b353843ef0d1ec2a8783641c74092e83625.json  query-22262b4d4f2e02b76921e15c09ab2bb360681d5a4a32c4ae723f342298a8507c.json  query-23795904799e1f66ceaec710d6cde0d5ed920a9b018261944da104ca01b45735.json  query-2516a5b80eec359b20627202916f49efc96eeccb5bbcf1f55c8aeee7972a3356.json  query-29112f94f7d2561d23041df7d8bd815fb078276b1f78b6c7367166a5951e6865.json  query-309a20c26cca34a53b3ae13bd0be001b6c9dd379777b5962b6d88a9f6424dcdc.json  query-3a678f905a71d9dc76cd5596d7982bc262950e457a5d019fefd0f36bfa12301b.json  query-3c45b290d22bb0dc84ae1311194df3c01ecd5167339481996dedcbfaecaf5765.json  query-3c81cc66243b60b9914c853a91f52d0269340c4387bcfa5bdbdab98d77826047.json  query-493c38f71565902b66a088a81eeb3f7bb393ad42ec246e7bbca8156c77ee65b9.json  query-5210e1c5153f90e2a93cb4f0d7533599e5100a6cf2cd29b53cd471c4121067fe.json  query-538b2ca1e05dffe86dc77252678b78a59c72d7f90f06b7916bc58774599bef83.json  query-5e635cabbe1555d789b16126f8aae2a8468970aceedaa65b10aa227c71ddced5.json  query-68d1a02ea1db639f95aa3cbde7a099ab548189ec0814d82446e073ee19f18b53.json  query-68ed938bcaa2cbf68ec53c39a9ca97356d15680807fe8fb3af156b6b186b9c9d.json  query-6bf71bf9e9c2c91bf8b394a363a685c91137dd1bb509906327de3581d1be3d84.json  query-6cf632650f5f006dd27280b9c0ffbfea1607d5828f76d891034e1f26430063b2.json  query-7415fb589f19e1a0a3baed6ffa6d42fedd984a6f832d5212d665d382967c2713.json  query-7adfeb1126bce7d630d62ee14e0a4d21c5669a281151b398d802e2308df30673.json  query-7bedb28304197ff86106a03aa196aaa0a70e75918bfee82cf4ba09eb339406c1.json  query-7d81a092ebf9a0bcb1299e2270ff243317d38486ce5ec023c6650e317de05734.json  query-806c6dc182cb4c656bd37a88fa58074110573fb53f195460cd13150fe442638e.json  (+43 more)
(+349 files in other folders)
