[package]
name = "rustfolio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-loki = { version = "0.2", optional = true }
url = "2.5"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal",
    "json"
] }
bigdecimal = { version = "0.3", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.9.2"
async-trait = "0.1.89"
health = "0.2.0"
http = "1.4.0"
csv = "1.3"
dashmap = "6.0"
regex = "1.12.3"
parking_lot = "0.12"
tokio-cron-scheduler = "0.10"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"
karma = { version = "1.0.0", features = ["serde"] }
futures = "0.3.32"

[features]
default = ["loki"]
loki = ["tracing-loki"]
